--- a/day0/C/conf.yaml
+++ b/day0/C/conf.yaml
@@ -1,21 +1,19 @@
-args:
-  n: 1000
 compile:
   c: -O2 -std=c11
   cpp: -O2 -std=c++14
-  java: ''
+  java: ""
   pas: -O2
-  py: ''
+  py: ""
 data: []
 folder: problem
 memory limit: 512 MiB
-name: C
+name: street
 partial score: false
 pre: []
 samples: []
 time limit: 1.0
 title:
-  zh-cn: 用于试题标题的中文名称
+  zh-cn: 鬼街
 type: program
 users: {}
 version: 2
