--- a/day0/B/conf.yaml
+++ b/day0/B/conf.yaml
@@ -1,19 +1,19 @@
 compile:
   c: -O2 -std=c11
   cpp: -O2 -std=c++14
-  java: ''
+  java: ""
   pas: -O2
-  py: ''
+  py: ""
 data: []
 folder: problem
 memory limit: 512 MiB
-name: B
+name: kuaishou
 partial score: false
 pre: []
 samples: []
 time limit: 1.0
 title:
-  zh-cn: 用于试题标题的中文名称
+  zh-cn: 视频倍增期
 type: program
 users: {}
 version: 2
