--- a/day0/B/data/1.in
+++ b/day0/B/data/1.in
@@ -1,1 +1,3 @@
-This is the input of the first test case.
+version https://git-lfs.github.com/spec/v1
+oid sha256:38b65d5afbcfe492ae8cc0ad485633c9e1e63818eacd9818dea83f9c38d52815
+size 32
