--- a/day0/B/down/1.in
+++ b/day0/B/down/1.in
@@ -1,6 +1,3 @@
-5 5
-0 2 3 3
-1 4
-0 2 4 3
-1 4
-1 3
+version https://git-lfs.github.com/spec/v1
+oid sha256:38b65d5afbcfe492ae8cc0ad485633c9e1e63818eacd9818dea83f9c38d52815
+size 32
