--- a/day0/C/conf.yaml
+++ b/day0/C/conf.yaml
@@ -4,16 +4,21 @@ compile:
   java: ""
   pas: -O2
   py: ""
-data: []
+data:
+  - cases: [1, 2, 3, 4, 5, 6, 7]
+    score: 100
 folder: problem
 memory limit: 512 MiB
 name: street
 partial score: false
-pre: []
-samples: []
-time limit: 1.0
+samples:
+  - cases: [1]
+time limit: 10.0
 title:
   zh-cn: 鬼街
 type: program
-users: {}
+users:
+  namasikanam:
+    std: { expected: == 100, path: namasikanam/std.cpp }
+    bf: { expected: == 0, path: namasikanam/bf.cpp }
 version: 2
