--- a/day0/C/data/1.in
+++ b/day0/C/data/1.in
@@ -1,1 +1,3 @@
-This is the input of the first test case.
+version https://git-lfs.github.com/spec/v1
+oid sha256:e7cf209f2cd41c7e7a58d65766107e94878c14cb90bfa611ee0a9a11801325bf
+size 62
