--- a/day0/C/down/1.in
+++ b/day0/C/down/1.in
@@ -1,10 +1,3 @@
-20 9
-1 10 2
-0 5 0
-0 6 1
-0 7 1
-0 15 1
-1 12 3
-0 8 0
-1 5 0
-0 8 2
+version https://git-lfs.github.com/spec/v1
+oid sha256:e7cf209f2cd41c7e7a58d65766107e94878c14cb90bfa611ee0a9a11801325bf
+size 62
