--- a/day0/A/data/1.in
+++ b/day0/A/data/1.in
@@ -1,1 +1,3 @@
-This is the input of the first test case.
+version https://git-lfs.github.com/spec/v1
+oid sha256:1a8a924ddabaff5bcc315439a8be910a71af2eb9f9197def3b76a03ac11fbce2
+size 18954707
