add data for new A

--- a/day0/A/data/1.in
+++ b/day0/A/data/1.in
@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:f09b7308f73763943679a7a910e68bf968974133afbaba9cafc3575cbe8ba62c
-size 6680773
+oid sha256:5dc120b5c5936994f0e38d4f7bf846ef9ea8141249605d53c5b4cd557785578c
+size 11720
