--- a/day0/A/pre/1.in
+++ b/day0/A/pre/1.in
@@ -1,7 +1,3 @@
-5
-2 1 3 2 1
-4
-2 4
-1 5
-3 5
-2 2
+version https://git-lfs.github.com/spec/v1
+oid sha256:24759a9b0b3d6c3b718fd5efe4ba233bcbf29dbcc2bddb86b5c6da4694a738e6
+size 30
