--- a/day0/C/conf.yaml
+++ b/day0/C/conf.yaml
@@ -23,6 +23,7 @@ users:
   namasikanam:
     std: { expected: == 100, path: namasikanam/std.cpp }
     bf: { expected: == 0, path: namasikanam/bf.cpp }
+    bf2: { expected: == 0, path: namasikanam/bf2.cpp }
     bf_list: { expected: == 0, path: namasikanam/bf_list.cpp }
   czr:
     wa_1: { expected: == 0, path: czr/wa_1.cpp }
