commit some files in lfs temporarily

--- a/day0/D/pre/1.in
+++ b/day0/D/pre/1.in
@@ -1,2 +1,3 @@
-This is the input of the first pre-test case.
-Edit this file at `pre/1.in`.
+version https://git-lfs.github.com/spec/v1
+oid sha256:8975ba2e007d4b901403d07972c8298befa1e484a212ccdd60528af7ba75b96f
+size 76
