--- a/day0/D/down/1.in
+++ b/day0/D/down/1.in
@@ -1,2 +1,3 @@
-This is the input of the first sample case.
-Edit this file at `down/1.in`.
+version https://git-lfs.github.com/spec/v1
+oid sha256:0bdc22e2e45b52c9c8a95e87127c11fe93945174633b30216724f55c1c1a8ae5
+size 75
