--- a/day0/D/conf.yaml
+++ b/day0/D/conf.yaml
@@ -1,21 +1,24 @@
-args:
-  n: 1000
 compile:
   c: -O2 -std=c11
   cpp: -O2 -std=c++14
   java: ''
   pas: -O2
   py: ''
-data: []
+data: 
+  - cases: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36]
+    score: 100
 folder: problem
 memory limit: 512 MiB
-name: D
+name: fla
 partial score: false
 pre: []
-samples: []
+samples: 
+  - cases: [1, 2, 3]
 time limit: 1.0
 title:
-  zh-cn: 用于试题标题的中文名称
+  zh-cn: 形式语言与自动机
 type: program
-users: {}
+users:
+  AnalogueHeart:
+    std: {expected: == 100, path: AnalogueHeart/fla.cpp}
 version: 2
