--- a/day0/D/conf.yaml
+++ b/day0/D/conf.yaml
@@ -8,7 +8,7 @@ data:
   - cases: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36]
     score: 100
 folder: problem
-memory limit: 512 MiB
+memory limit: 1 GiB
 name: D
 partial score: false
 pre: []
@@ -22,5 +22,5 @@ users:
   AnalogueHeart:
     std: {expected: == 100, path: AnalogueHeart/fla.cpp}
   zyb:
-    nlogn: {expected: == 0, path: zyb/nlogn.cpp}
+    nlogn: {expected: == 100, path: zyb/nlogn.cpp}
 version: 2
