--- a/day0/D/yt_ckw/data.in
+++ b/day0/D/yt_ckw/data.in
@@ -1,1 +1,3 @@
-())()())((
+version https://git-lfs.github.com/spec/v1
+oid sha256:be10fa433bc37a2b596aae04089ad6243e695e0d936bc68f26acf960a4e7a0a5
+size 12
